# ecenet

./: .gitignore  LICENSE  README.md  pyproject.toml  ruff.toml
.github/workflows/: ci.yml
ecenet/: __init__.py  ace_basis.py  calculator.py  elements.py  equivariant.py  model.py  radial.py  spherical.py
ecenet/datasets/: __init__.py  mptrj.py
examples/: run_md_box.py  run_md_rmd17_langevin.py  run_md_rmd17_nve.py  run_md_spice.py  run_md_xyz.py  run_npt_box.py
scripts/: eval_spice.py  prepare_mptrj.py  train_ecenet.py  train_ecenet_mptrj.py  train_ecenet_spice.py
tests/: conftest.py  test_calculator.py  test_ecenet.py  test_elements.py  test_mptrj_trainer.py  test_stress_fd.py
tools/: equiv_vs_ref.py  profile_step.py
